--- a/package.json
+++ b/package.json
@@ -4,18 +4,19 @@
   "description": "",
   "license": "Apache-2.0",
   "dependencies": {
-    "@remix-run/react": "^1.2.1",
+    "@nextui-org/react": "^1.0.0-beta.9",
+    "@remix-run/react": "^1.6.3",
+    "@remix-run/serve": "^1.6.3",
+    "cross-env": "^7.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "remix": "^1.2.1",
-    "@remix-run/serve": "^1.2.1",
-    "cross-env": "^7.0.3"
+    "remix": "^1.6.3"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.2.1",
-    "@types/react": "^17.0.24",
-    "@types/react-dom": "^17.0.9",
-    "typescript": "^4.1.2"
+    "@remix-run/dev": "^1.6.3",
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.5",
+    "typescript": "^4.7.4"
   },
   "engines": {
     "node": ">=14"
