--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "private": true,
-  "name": "project-template-remix",
+  "name": "vercel-route-visualizer",
   "description": "",
-  "license": "Apache-2.0",
+  "license": "MIT",
   "dependencies": {
     "@nextui-org/react": "^1.0.0-beta.9",
     "@remix-run/react": "^1.6.3",
@@ -14,8 +14,8 @@
   },
   "devDependencies": {
     "@remix-run/dev": "^1.6.3",
-    "@types/react": "^18.0.14",
-    "@types/react-dom": "^18.0.5",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.2",
     "typescript": "^4.7.4"
   },
   "engines": {
